test: ScheduleTemplateService 업데이트 로직 테스트 추가