@@ -1,17 +1,24 @@
 package com.burntoburn.easyshift.service.schedule.imp;
 
+import com.burntoburn.easyshift.dto.schedule.req.ScheduleTemplateRequest;
+import com.burntoburn.easyshift.dto.schedule.req.ShiftTemplateRequest;
 import com.burntoburn.easyshift.entity.schedule.ScheduleTemplate;
+import com.burntoburn.easyshift.entity.schedule.ShiftTemplate;
+import com.burntoburn.easyshift.entity.store.Store;
 import com.burntoburn.easyshift.repository.schedule.ScheduleTemplateRepository;
+import com.burntoburn.easyshift.repository.store.StoreRepository;
 import com.burntoburn.easyshift.service.schedule.ScheduleTemplateService;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
-import java.util.Arrays;
+import java.time.LocalTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -20,126 +27,143 @@ import static org.mockito.Mockito.*;
 class ScheduleTemplateServiceImplTest {
 
     @Autowired
-    private ScheduleTemplateService scheduleTemplateService; // ✅ 실제 서비스 객체
+    private ScheduleTemplateService scheduleTemplateService;
 
     @MockitoBean
-    private ScheduleTemplateRepository scheduleTemplateRepository; // ✅ Mock Repository (Spring Context 내에서 동작)
+    private ScheduleTemplateRepository scheduleTemplateRepository;
+
+    @MockitoBean
+    private StoreRepository storeRepository;
+
+    private Store store;
+    private ScheduleTemplate existingTemplate;
+
+    @BeforeEach
+    void setUp() {
+        // 매장(Store) 객체 생성
+        store = Store.builder().id(1L).build();
+
+        // 기존 ShiftTemplate 2개 포함된 ScheduleTemplate 생성
+        ShiftTemplate shift1 = ShiftTemplate.builder()
+                .shiftTemplateName("Morning Shift")
+                .startTime(LocalTime.of(9, 0))
+                .endTime(LocalTime.of(17, 0))
+                .build();
+
+        ShiftTemplate shift2 = ShiftTemplate.builder()
+                .shiftTemplateName("Evening Shift")
+                .startTime(LocalTime.of(14, 0))
+                .endTime(LocalTime.of(22, 0))
+                .build();
+
+        existingTemplate = ScheduleTemplate.builder()
+                .id(1L)
+                .scheduleTemplateName("Old Schedule")
+                .store(store)
+                .shiftTemplates(new ArrayList<>(List.of(shift1, shift2))) // 기존 ShiftTemplates 추가
+                .build();
+    }
 
     @Test
     @DisplayName("스케줄 템플릿 생성")
     void createScheduleTemplate() {
         // Given
-        ScheduleTemplate newScheduleTemplate = ScheduleTemplate.builder()
-                .scheduleTemplateName("Weekly Schedule")
+        ScheduleTemplateRequest request = ScheduleTemplateRequest.builder()
+                .scheduleTemplateName("New Schedule")
+                .shiftTemplates(List.of(
+                        new ShiftTemplateRequest("Morning Shift", LocalTime.of(8, 0), LocalTime.of(12, 0)),
+                        new ShiftTemplateRequest("Evening Shift", LocalTime.of(16, 0), LocalTime.of(20, 0))
+                ))
                 .build();
 
-        // Mock 설정: save()가 호출되면 newScheduleTemplate 반환
-        when(scheduleTemplateRepository.save(any(ScheduleTemplate.class))).thenReturn(newScheduleTemplate);
+        // 새로운 ScheduleTemplate 객체 생성
+        ScheduleTemplate newTemplate = ScheduleTemplate.builder()
+                .scheduleTemplateName("New Schedule")
+                .store(store)
+                .build();
+
+        when(storeRepository.findById(1L)).thenReturn(Optional.of(store));
+        when(scheduleTemplateRepository.save(any(ScheduleTemplate.class))).thenReturn(newTemplate); // ✅ 새로운 객체 반환하도록 변경
 
         // When
-        ScheduleTemplate createdTemplate = scheduleTemplateService.createScheduleTemplate(newScheduleTemplate);
+        ScheduleTemplate createdTemplate = scheduleTemplateService.createScheduleTemplate(1L, request);
 
         // Then
         assertNotNull(createdTemplate);
-        assertEquals("Weekly Schedule", createdTemplate.getScheduleTemplateName());
+        assertEquals("New Schedule", createdTemplate.getScheduleTemplateName()); // ✅ 여기서 기대값과 실제값 비교
         verify(scheduleTemplateRepository, times(1)).save(any(ScheduleTemplate.class));
     }
 
     @Test
-    @DisplayName("스케줄 템플릿 조회 - 단건")
+    @DisplayName("스케줄 템플릿 단건 조회")
     void getScheduleTemplateOne() {
         // Given
-        ScheduleTemplate scheduleTemplate = ScheduleTemplate.builder()
-                .id(1L)
-                .scheduleTemplateName("Daily Schedule")
-                .build();
-
-        when(scheduleTemplateRepository.findById(1L)).thenReturn(Optional.of(scheduleTemplate));
+        when(scheduleTemplateRepository.findById(1L)).thenReturn(Optional.of(existingTemplate));
 
         // When
         ScheduleTemplate foundTemplate = scheduleTemplateService.getScheduleTemplateOne(1L);
 
         // Then
         assertNotNull(foundTemplate);
-        assertEquals(1L, foundTemplate.getId());
-        assertEquals("Daily Schedule", foundTemplate.getScheduleTemplateName());
+        assertEquals("Old Schedule", foundTemplate.getScheduleTemplateName());
         verify(scheduleTemplateRepository, times(1)).findById(1L);
     }
 
     @Test
-    @DisplayName("스케줄 템플릿 조회 - 전체")
+    @DisplayName("스케줄 템플릿 전체 조회")
     void getAllScheduleTemplates() {
         // Given
-        List<ScheduleTemplate> templateList = Arrays.asList(
-                ScheduleTemplate.builder().scheduleTemplateName("Morning Shift").build(),
-                ScheduleTemplate.builder().scheduleTemplateName("Evening Shift").build()
-        );
-
-        when(scheduleTemplateRepository.findAll()).thenReturn(templateList);
+        List<ScheduleTemplate> templates = List.of(existingTemplate);
+        when(scheduleTemplateRepository.findAll()).thenReturn(templates);
 
         // When
-        List<ScheduleTemplate> templates = scheduleTemplateService.getAllScheduleTemplates();
+        List<ScheduleTemplate> result = scheduleTemplateService.getAllScheduleTemplates();
 
         // Then
-        assertNotNull(templates);
-        assertEquals(2, templates.size());
-        assertEquals("Morning Shift", templates.get(0).getScheduleTemplateName());
-        assertEquals("Evening Shift", templates.get(1).getScheduleTemplateName());
+        assertNotNull(result);
+        assertEquals(1, result.size());
         verify(scheduleTemplateRepository, times(1)).findAll();
     }
 
     @Test
-    @DisplayName("스케줄 템플릿 업데이트")
-    void updateScheduleTemplate() {
+    @DisplayName("스케줄 템플릿 업데이트 시 기존 ShiftTemplate 삭제 및 새로운 ShiftTemplate 추가 확인")
+    void updateScheduleTemplate_ShouldRemoveExistingAndAddNewShiftTemplates() {
         // Given
-        ScheduleTemplate existingTemplate = ScheduleTemplate.builder()
-                .id(1L)
-                .scheduleTemplateName("Old Schedule")
-                .build();
-
-        ScheduleTemplate updatedTemplateDetails = ScheduleTemplate.builder()
+        ScheduleTemplateRequest updatedRequest = ScheduleTemplateRequest.builder()
                 .scheduleTemplateName("Updated Schedule")
+                .shiftTemplates(List.of(
+                        new ShiftTemplateRequest("Updated Morning Shift", LocalTime.of(8, 0), LocalTime.of(12, 0)),
+                        new ShiftTemplateRequest("Updated Evening Shift", LocalTime.of(16, 0), LocalTime.of(20, 0))
+                ))
                 .build();
 
+        when(storeRepository.findById(1L)).thenReturn(Optional.of(store));
         when(scheduleTemplateRepository.findById(1L)).thenReturn(Optional.of(existingTemplate));
-        when(scheduleTemplateRepository.save(any(ScheduleTemplate.class))).thenReturn(updatedTemplateDetails);
 
         // When
-        ScheduleTemplate updatedTemplate = scheduleTemplateService.updateScheduleTemplate(1L, updatedTemplateDetails);
+        scheduleTemplateService.updateScheduleTemplate(1L, 1L, updatedRequest);
 
         // Then
-        assertNotNull(updatedTemplate);
-        assertEquals("Updated Schedule", updatedTemplate.getScheduleTemplateName());
-        verify(scheduleTemplateRepository, times(1)).findById(1L);
-        verify(scheduleTemplateRepository, times(1)).save(any(ScheduleTemplate.class));
+        assertEquals("Updated Schedule", existingTemplate.getScheduleTemplateName());
+        assertEquals(2, existingTemplate.getShiftTemplates().size());
+        assertEquals("Updated Morning Shift", existingTemplate.getShiftTemplates().get(0).getShiftTemplateName());
+        assertEquals("Updated Evening Shift", existingTemplate.getShiftTemplates().get(1).getShiftTemplateName());
+
+        // Mocking 환경에서는 save() 호출을 검증해야 한다.
+        verify(scheduleTemplateRepository, times(1)).save(existingTemplate);
     }
 
     @Test
     @DisplayName("스케줄 템플릿 삭제")
     void deleteScheduleTemplate() {
         // Given
-        Long templateId = 1L;
-        ScheduleTemplate templateToDelete = ScheduleTemplate.builder()
-                .id(templateId)
-                .scheduleTemplateName("Old Schedule")
-                .build();
-
-        // Mock 설정: 삭제할 객체 조회 가능하도록 설정
-        when(scheduleTemplateRepository.findById(templateId)).thenReturn(Optional.of(templateToDelete));
-
-        // Mock 설정: deleteById() 호출 시 아무 동작도 하지 않도록 설정
-        doNothing().when(scheduleTemplateRepository).deleteById(templateId);
+        when(scheduleTemplateRepository.findById(1L)).thenReturn(Optional.of(existingTemplate));
+        doNothing().when(scheduleTemplateRepository).deleteById(1L);
 
         // When
-        scheduleTemplateService.deleteScheduleTemplate(templateId);
+        scheduleTemplateService.deleteScheduleTemplate(1L);
 
         // Then
-        verify(scheduleTemplateRepository, times(1)).findById(templateId);
-        verify(scheduleTemplateRepository, times(1)).deleteById(templateId);
-
-        // 삭제 후 findById()가 Optional.empty()를 반환하는지 검증
-        when(scheduleTemplateRepository.findById(templateId)).thenReturn(Optional.empty());
-        Optional<ScheduleTemplate> deletedTemplate = scheduleTemplateRepository.findById(templateId);
-        assertTrue(deletedTemplate.isEmpty(), "삭제된 ScheduleTemplate이 더 이상 존재하지 않아야 합니다.");
+        verify(scheduleTemplateRepository, times(1)).deleteById(1L);
     }
 }
